# workshop-agu2025

./: .gitignore  .pre-commit-config.yaml  00-instructors.md  01-prerequisites.md  02-schedule.md  LICENSE  README.md  index.md  myst.yml  pixi.toml  plugin-custom-directives.mjs
.github/workflows/: build-and-publish-docker-image.yml  pr-rtd-link.yml
04-materials/: 00-slides.md  01-module-1-rename-me.md
assets/styles/: style.css
docker/: README.md  apt.txt  environment.yml  start
for-instructors/: dogfooding.md  helpers.md  style-guide.md
materials/01-working-in-jupyterhub/: CryoCloud_demo.ipynb  index.md
materials/02-interactive-viz/: index.md
materials/03-integrating-ai/: index.md
materials/04-data-in-the-cloud/: index.md
materials/05-sharing-and-publishing/: index.md
materials/06-geojupyter/: index.md
modules/01-working-in-jupyterhub/: index.md
modules/02-interactive-viz/: index.ipynb  index.md
modules/03-integrating-ai/: index.ipynb  index.md
modules/04-data-in-the-cloud/: index.ipynb  pyproject.toml
modules/05-sharing-and-publishing/: index.md
reference/: 00-vocabulary.md  01-starting-your-server.md  02-stopping-your-server.md  03-gh-auth.md  04-using-myst.md
